<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PinActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPinChar0"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tilPinChar1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinChar0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="48sp"
            android:textColor="@color/edit_text_color"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPinChar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toBottomOf="@+id/tilPinChar0"
        app:layout_constraintEnd_toStartOf="@+id/tilPinChar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilPinChar0"
        app:layout_constraintTop_toTopOf="@+id/tilPinChar0"
        tools:ignore="SpeakableTextPresentCheck">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinChar1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="2"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="@color/edit_text_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPinChar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toBottomOf="@+id/tilPinChar0"
        app:layout_constraintEnd_toStartOf="@+id/tilPinChar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilPinChar1"
        app:layout_constraintTop_toTopOf="@+id/tilPinChar0"
        tools:ignore="SpeakableTextPresentCheck" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinChar2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="2"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="@color/edit_text_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPinChar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintBottom_toBottomOf="@+id/tilPinChar0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilPinChar2"
        app:layout_constraintTop_toTopOf="@+id/tilPinChar0"
        tools:ignore="SpeakableTextPresentCheck" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinChar3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="2"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="@color/edit_text_color"
            android:textSize="48sp"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tilPinChar3"
        app:layout_constraintStart_toStartOf="@+id/tilPinChar0"
        app:layout_constraintTop_toBottomOf="@+id/tilPinChar0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_background"
            android:padding="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_9"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintTop_toTopOf="@+id/button7"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOk"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button0"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7"
                app:strokeWidth="0dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_0"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/buttonOk"
                app:layout_constraintEnd_toStartOf="@+id/buttonBack"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonOk"
                app:layout_constraintTop_toTopOf="@+id/buttonOk"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_7"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonOk"
                app:layout_constraintEnd_toStartOf="@+id/button8"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_8"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button9"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintTop_toTopOf="@+id/button7"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_6"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintTop_toTopOf="@+id/button4"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_4"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@+id/button5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_5"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintTop_toTopOf="@+id/button4"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_1"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_2"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintTop_toTopOf="@+id/button1"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:text="@string/number_3"
                android:textColor="@android:color/black"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button1"
                app:strokeWidth="0dp" />

            <ImageButton
                android:id="@+id/buttonBack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="@+id/buttonOk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button0"
                app:layout_constraintTop_toTopOf="@+id/buttonOk"
                app:srcCompat="@drawable/ic_baseline_keyboard_backspace"
                app:strokeWidth="0dp"
                app:tint="#FC5645" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/pin_prompt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tilPinChar3"
        app:layout_constraintStart_toStartOf="@+id/tilPinChar0"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>